src/app/vehicle/vehicle.component.scss
@use "../variables" as vars;
@use "sass:color";

:host {
  width: 100%;
  height: 100%;
}

$dkv-vehicle-container-width: 600px;
$dkv-vehicle-container-width-sm: 400px;
$dkv-vehicle-space: vars.$dkv-vertical-space;

.dkv-page-title {
  display: flex;
  justify-content: center;
  margin-block: $dkv-vehicle-space;
}

.dkv-vehicle-grid {
  display: grid;
  width: 100%;
  grid-template-columns: repeat(
    auto-fit,
    minmax(200px, $dkv-vehicle-container-width)
  );
  grid-template-rows: max-content;
  grid-gap: $dkv-vehicle-space;
  padding-inline: vars.$dkv-horizontal-space;
  margin-block: $dkv-vehicle-space;
  justify-content: center;

  > .dkv-vehicle-image,
  > .dkv-vehicle-description {
    border: 1px solid vars.$dkv-border-color;
    border-radius: 6px;
    overflow: hidden;
  }
}

.dkv-vehicle-image {
  max-height: $dkv-vehicle-container-width;
  display: flex;

  img {
    width: auto;
    height: auto;
    max-width: $dkv-vehicle-container-width;
    max-height: $dkv-vehicle-container-width;
    object-fit: cover;
    border-radius: inherit;
  }
}

.dkv-vehicle-description {
  width: 100%;
  display: flex;
  flex-direction: column;
  flex-shrink: 0;
  padding: 1rem;

  > h4 {
    color: color.adjust(vars.$dkv-text-color, $lightness: 25);
  }
}

.dkv-vehicle-text-bold {
  font-weight: bold;
}

@media screen and (max-width: 700px) {
  .dkv-vehicle-grid {
    padding-inline: vars.$dkv-horizontal-space-sm;
  }
}

@media screen and (max-width: 1350px) {
  .dkv-vehicle-image {
    img {
      max-width: 100%;
      width: 100%;
      max-height: $dkv-vehicle-container-width-sm;
    }
  }
}

